2008-09-03  George Liu <george.liu@ricoh-tech.com>

	* PPD/: Fixed UIConstraints bug in 30 Ricoh Family PS PPD files. 

2008-09-03  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript.xml, opt/161.xml, opt/162.xml, opt/2.xml,
	  opt/6.xml, opt/Postscript-Resolution.xml,
	  opt/largeformat-PageSize.xml,
	  printer/Generic-PostScript_Printer.xml, driver/Postscript1.xml,
	  opt/Postscript-Duplex.xml opt/Postscript-InputSlot.xml,
	  opt/Postscript-PageSize.xml,
	  opt/Postscript-largeformat-PageSize.xml,
	  opt/Postscript1-Resolution.xml,
	  printer/Generic-PostScript_Level_1_Printer.xml,
	  opt/Postscript-PreFilter.xml: Split "Postscript" driver entry
	  into "Postscript1" for PostScript level 1 printers and
	  "Postscript" for other PostScript printers. Both are much
	  simpler now. The "Postscript1" driver uses Ghostscript, the
	  "Postscript" driver not. This should make the PostScript output
	  more reliably working on the printers.

2008-09-03  Dafydd Crosby <dcrosby@userful.com>

	* printer/Dell-3100cn.xml, PPD/Dell, driver/pxlmono.xml,
	driver/Postscript.xml, printer/Lexmark-E120n.xml, 
	driver/lj4dith.xml, printer/Lexmark-E120.xml:
	added the Dell 3100cn (Ubuntu #90718)
	added the Lexmark E120
	updated Lexmark E120n information

2008-09-03  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-DesignJet_750.xml, printer/Apple-12_640ps.xml,
	printer/Ricoh-Aficio_5206.xml: Fixed inconsistencies between the
	model names and the XML file names, which were preventing PPDs
	from being accessible.

2008-09-03  Tim Waugh  <twaugh@redhat.com>

	* printer/Lexmark-E120n.xml: Added IEEE 1284 device ID (RH bug
	#201318).

2008-09-03  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/44.xml: Fixed choice names which lead to broken PPDs for
	  the "pbm2l7k" driver (Bug #167).

	* printer/Brother-HL-2060.xml: Changed recommended driver to
	  "hpijs" (Bug #166, RH bug #292021).

2008-09-02  George Liu <george.liu@ricoh-tech.com>
