@@ -32,8 +32,8 @@
       <description>Hewlett-Packard color LaserJet 3550</description>
     </usb>
   </autodetect>
-  <functionality>A</functionality>
-  <driver>pxljr</driver>
+  <functionality>B</functionality>
+  <driver>hpijs</driver>
   <!--verified-->
   <!--no "contrib_url"-->
   <comments>
@@ -41,15 +41,19 @@
 
     Low-cost, reliable, Narrow format paper sizes. In-line color
     printing.&lt;p&gt;
-    
-    For basic printing functionality use the &lt;a
-    href=&quot;http://hp-pxl-jetready.sourceforge.net/&quot;&gt;"pxljr"
-    driver &lt;/a&gt;. For advanced functionality such as printer
-    status and maintenance features, use the &lt;a
-    href=&quot;http://hplip.sf.net/&quot;&gt; HPLIP software&lt;/a&gt;
-    together with "pxljr". &lt;p&gt;
 
-    Various flavors are available, with networking, duplexer, etc.&lt;p&gt;
+    For highest print quality without proprietary plug-in use the
+    &lt;a
+    href=&quot;http://hp-pxl-jetready.sourceforge.net/&quot;&gt;"pxljr"
+    driver &lt;/a&gt;, for working duplex use "&lt;a
+    href=&quot;http://hplip.sf.net/&quot;&gt;hpijs&lt;/a&gt;". For
+    advanced functionality such as printer status and maintenance
+    features, use the &lt;a href=&quot;http://hplip.sf.net/&quot;&gt;
+    HPLIP software&lt;/a&gt; together with "hpijs" or
+    "pxljr". &lt;p&gt;
+
+    Various flavors are available, with networking, duplexer,
+    etc.&lt;p&gt;
 
     </en>
   </comments>
