@@ -1,3 +1,11 @@
+2008-09-03  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/HP-Color_LaserJet_3500.xml,
+	  printer/HP-Color_LaserJet_3550.xml,
+	  printer/HP-Color_LaserJet_3600.xml: Switched default driver to
+	  "hpijs" as "pxljr" has bugs in normal and draft print quality and
+	  also does not print duplex (Ubuntu bug #228635).
+
 2008-09-03  George Liu <george.liu@ricoh-tech.com>
 
 	* PPD/: Fixed UIConstraints bug in 30 Ricoh Family PS PPD files. 
